<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity.LoginActivity"
    android:background="@drawable/login_activity_background"
    android:id="@+id/loginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="50sp"
            android:paddingLeft="50sp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_login_icon"
                android:layout_gravity="center"
                android:layout_marginBottom="60sp">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="10sp">

                    <EditText
                        android:id="@+id/loginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_fields_border"
                        android:drawableLeft="@drawable/ic_login_email_icon"
                        android:drawablePadding="5dp"
                        android:paddingLeft="2sp"
                        android:paddingRight="2sp"
                        android:paddingBottom="3sp"
                        android:hint="@string/login_email"
                        android:textColorHint="#BEBEBE"
                        android:textColor="#FFF">
                    </EditText>

                    <TextView
                        android:id="@+id/loginEmailErrorMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Field must be inputted"
                        android:textColor="#ff0033"
                        android:layout_gravity="left"
                        android:visibility="invisible">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="20sp">

                    <EditText
                        android:id="@+id/loginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@drawable/login_fields_border"
                        android:drawableLeft="@drawable/ic_login_password_icon"
                        android:drawablePadding="5dp"
                        android:paddingLeft="2sp"
                        android:paddingRight="2sp"
                        android:paddingBottom="3sp"
                        android:hint="@string/login_password"
                        android:textColorHint="#BEBEBE"
                        android:textColor="#FFF">
                    </EditText>

                    <TextView
                        android:id="@+id/loginPasswordErrorMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Field must be inputted"
                        android:textColor="#ff0033"
                        android:layout_gravity="left"
                        android:visibility="invisible">
                    </TextView>

                </LinearLayout>

                <Button
                    android:id="@+id/loginSubmitButton"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:background="@drawable/login_submit_button"
                    android:layout_marginBottom="10sp"
                    android:text="@string/login_submit"
                    android:textAllCaps="false"
                    android:textColor="#FFF"
                    android:textSize="18sp">
                </Button>

                <Button
                    android:id="@+id/loginRegisterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_register_here"
                    android:textAllCaps="false"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/transparent"
                    android:textColor="#BEBEBE"
                    >

                </Button>

            </LinearLayout>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>