<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity.LoginActivity"
    android:background="@drawable/login_activity_background"
    android:id="@+id/registerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingRight="50sp"
            android:paddingLeft="50sp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40sp"
                android:src="@drawable/image_login_icon"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10sp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/registerFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_fields_border"
                        android:drawableLeft="@drawable/ic_register_user"
                        android:drawablePadding="5dp"
                        android:hint="@string/login_first_name"
                        android:paddingLeft="2sp"
                        android:paddingRight="2sp"
                        android:paddingBottom="3sp"
                        android:textColor="#FFF"
                        android:textColorHint="#BEBEBE"></EditText>

                    <TextView
                        android:id="@+id/registerFirstNameErrorMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="Field must be inputted"
                        android:textColor="#ff0033"
                        android:visibility="invisible"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10sp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/registerLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_fields_border"
                        android:drawableLeft="@drawable/ic_register_user"
                        android:drawablePadding="5dp"
                        android:hint="@string/login_last_name"
                        android:paddingLeft="2sp"
                        android:paddingRight="2sp"
                        android:paddingBottom="3sp"
                        android:textColor="#FFF"
                        android:textColorHint="#BEBEBE"></EditText>

                    <TextView
                        android:id="@+id/registerLastNameErrorMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="Field must be inputted"
                        android:textColor="#ff0033"
                        android:visibility="invisible"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10sp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/registerEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_fields_border"
                        android:drawableLeft="@drawable/ic_login_email_icon"
                        android:drawablePadding="5dp"
                        android:hint="@string/login_email"
                        android:paddingLeft="2sp"
                        android:paddingRight="2sp"
                        android:paddingBottom="3sp"
                        android:textColor="#FFF"
                        android:textColorHint="#BEBEBE"></EditText>

                    <TextView
                        android:id="@+id/registerEmailErrorMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="Field must be inputted"
                        android:textColor="#ff0033"
                        android:visibility="invisible"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10sp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/registerPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_fields_border"
                        android:drawableLeft="@drawable/ic_login_password_icon"
                        android:drawablePadding="5dp"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        android:paddingLeft="2sp"
                        android:paddingRight="2sp"
                        android:paddingBottom="3sp"
                        android:textColor="#FFF"
                        android:textColorHint="#BEBEBE"></EditText>

                    <TextView
                        android:id="@+id/registerPasswordErrorMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="Field must be inputted"
                        android:textColor="#ff0033"
                        android:visibility="invisible"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20sp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/registerConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_fields_border"
                        android:drawableLeft="@drawable/ic_login_password_icon"
                        android:drawablePadding="5dp"
                        android:hint="@string/login_confirm_password"
                        android:inputType="textPassword"
                        android:paddingLeft="2sp"
                        android:paddingRight="2sp"
                        android:paddingBottom="3sp"
                        android:textColor="#FFF"
                        android:textColorHint="#BEBEBE"></EditText>

                    <TextView
                        android:id="@+id/registerConfirmPasswordErrorMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="Field must be inputted"
                        android:textColor="#ff0033"
                        android:visibility="invisible"></TextView>

                </LinearLayout>


                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/login_submit_button"
                    android:text="@string/login_register"
                    android:textAllCaps="false"
                    android:textColor="#FFF"
                    android:textSize="18sp"></Button>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/registerReturnButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@color/transparent"
        android:layout_margin="15sp"
        android:src="@drawable/ic_register_return_button">

    </ImageButton>
</RelativeLayout>